WIP Initial 'Dashboard' testing in jupyter and some formatting

--- a/jupyter_notebooks/FullPipeline.ipynb
+++ b/jupyter_notebooks/FullPipeline.ipynb
@@ -143,19 +143,21 @@
     "    month = match.group(3)\n",
     "    date = datetime.strptime(f\"{year}-{month}-01\", \"%Y-%m-%d\")\n",
     "    start_date = date - relativedelta(months=2)\n",
-    "    \n",
+    "\n",
     "    if month == \"12\":\n",
     "        end_date = date.replace(month=12, day=31)\n",
     "    else:\n",
-    "        end_date = date.replace(month=date.month+1, day=1) - timedelta(days=1)\n",
-    "    \n",
+    "        end_date = date.replace(month=date.month + 1, day=1) - timedelta(days=1)\n",
+    "\n",
     "    load_quarter = f\"{month}{year}\"\n",
-    "    \n",
+    "\n",
     "    # Load the XLSX, apply the start and end dates. Union, and Return\n",
-    "    df = pd.read_excel(file)[[cola.upper(), colb.upper(), \"RES_RATIO\", \"BUS_RATIO\", \"OTH_RATIO\", \"TOT_RATIO\"]]\n",
-    "    df['start_date'] = start_date.strftime(\"%Y-%m-%d\")\n",
-    "    df['end_date'] = end_date.strftime(\"%Y-%m-%d\")\n",
-    "    df['load_quarter'] = load_quarter\n",
+    "    df = pd.read_excel(file)[\n",
+    "        [cola.upper(), colb.upper(), \"RES_RATIO\", \"BUS_RATIO\", \"OTH_RATIO\", \"TOT_RATIO\"]\n",
+    "    ]\n",
+    "    df[\"start_date\"] = start_date.strftime(\"%Y-%m-%d\")\n",
+    "    df[\"end_date\"] = end_date.strftime(\"%Y-%m-%d\")\n",
+    "    df[\"load_quarter\"] = load_quarter\n",
     "    dfs += [df]\n",
     "zip_tract_df = pd.concat(dfs, axis=0, ignore_index=True)"
    ]
@@ -173,7 +175,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con.sql(\"DELETE FROM crosswalk_zip_tract WHERE load_quarter IN (SELECT DISTINCT load_quarter FROM zip_tract_df)\")"
+    "con.sql(\n",
+    "    \"DELETE FROM crosswalk_zip_tract WHERE load_quarter IN (SELECT DISTINCT load_quarter FROM zip_tract_df)\"\n",
+    ")"
    ]
   },
   {
@@ -182,10 +186,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con.sql(\"\"\"\n",
+    "con.sql(\n",
+    "    \"\"\"\n",
     "INSERT INTO crosswalk_zip_tract FROM\n",
     "    (SELECT * FROM zip_tract_df);\n",
-    "           \"\"\")"
+    "           \"\"\"\n",
+    ")"
    ]
   },
   {
@@ -232,7 +238,9 @@
     "import pandas as pd\n",
     "\n",
     "# Todo: Can we find zillow crosswalk that supports multi year data?\n",
-    "df_zillow_county_crosswalk = pd.read_csv(\"../chosen_data/zillow/CountyCrossWalk_Zillow.csv\")"
+    "df_zillow_county_crosswalk = pd.read_csv(\n",
+    "    \"../chosen_data/zillow/CountyCrossWalk_Zillow.csv\"\n",
+    ")"
    ]
   },
   {
@@ -243,10 +251,12 @@
    "source": [
     "con.sql(\"DELETE FROM crosswalk_zillow_cbsa\")\n",
     "\n",
-    "con.sql(\"\"\"\n",
+    "con.sql(\n",
+    "    \"\"\"\n",
     "INSERT INTO crosswalk_zillow_cbsa FROM\n",
     "    (SELECT * FROM df_zillow_county_crosswalk);\n",
-    "           \"\"\")"
+    "           \"\"\"\n",
+    ")"
    ]
   },
   {
@@ -271,11 +281,27 @@
     "if not files_to_load:\n",
     "    raise ValueError(f\"No file found for year {year} in ../chosen_data/svi/!\")\n",
     "if len(files_to_load) > 1:\n",
-    "    raise ValueError(f\"Multiple files found for {year} in ../chosen_data/svi/!\\n{files_to_load}\")\n",
+    "    raise ValueError(\n",
+    "        f\"Multiple files found for {year} in ../chosen_data/svi/!\\n{files_to_load}\"\n",
+    "    )\n",
     "\n",
     "file = files_to_load[0]\n",
-    "df_svi = pd.read_csv(file)[[\"STATE\", \"ST_ABBR\", \"STCNTY\" ,\"COUNTY\" ,\"FIPS\" ,\"LOCATION\" , \"RPL_THEME1\", \"RPL_THEME2\", \"RPL_THEME3\", \"RPL_THEME4\", \"RPL_THEMES\"]]\n",
-    "df_svi['year'] = year"
+    "df_svi = pd.read_csv(file)[\n",
+    "    [\n",
+    "        \"STATE\",\n",
+    "        \"ST_ABBR\",\n",
+    "        \"STCNTY\",\n",
+    "        \"COUNTY\",\n",
+    "        \"FIPS\",\n",
+    "        \"LOCATION\",\n",
+    "        \"RPL_THEME1\",\n",
+    "        \"RPL_THEME2\",\n",
+    "        \"RPL_THEME3\",\n",
+    "        \"RPL_THEME4\",\n",
+    "        \"RPL_THEMES\",\n",
+    "    ]\n",
+    "]\n",
+    "df_svi[\"year\"] = year"
    ]
   },
   {
@@ -286,10 +312,12 @@
    "source": [
     "con.sql(\"DELETE FROM svi WHERE year IN (SELECT DISTINCT year FROM df_svi)\")\n",
     "\n",
-    "con.sql(\"\"\"\n",
+    "con.sql(\n",
+    "    \"\"\"\n",
     "INSERT INTO svi FROM\n",
     "    (SELECT * FROM df_svi);\n",
-    "           \"\"\")"
+    "           \"\"\"\n",
+    ")"
    ]
   },
   {
@@ -307,7 +335,9 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df_zillow_zhvi_sfr_zip = pd.read_csv(\"../chosen_data/zillow/Zip_zhvi_uc_sfr_tier_0.33_0.67_sm_sa_month.csv\")"
+    "df_zillow_zhvi_sfr_zip = pd.read_csv(\n",
+    "    \"../chosen_data/zillow/Zip_zhvi_uc_sfr_tier_0.33_0.67_sm_sa_month.csv\"\n",
+    ")"
    ]
   },
   {
@@ -316,10 +346,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con.sql(\"\"\"\n",
+    "con.sql(\n",
+    "    \"\"\"\n",
     "CREATE OR REPLACE TABLE zillow_zhvi_sfr_zip_bronze AS\n",
     "    SELECT * FROM df_zillow_zhvi_sfr_zip;\n",
-    "           \"\"\")"
+    "           \"\"\"\n",
+    ")"
    ]
   },
   {
@@ -417,7 +449,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con.sql(\"\"\"\n",
+    "con.sql(\n",
+    "    \"\"\"\n",
     "CREATE OR REPLACE TABLE tracts_per_zip_silver AS\n",
     "(SELECT \n",
     "    ZIP as zip, \n",
@@ -443,7 +476,8 @@
     "    start_date, \n",
     "    end_date \n",
     "ORDER BY zip, start_date DESC)\n",
-    "\"\"\")"
+    "\"\"\"\n",
+    ")"
    ]
   },
   {
@@ -516,13 +550,15 @@
     }
    ],
    "source": [
-    "con.sql(\"\"\"\n",
+    "con.sql(\n",
+    "    \"\"\"\n",
     "CREATE OR REPLACE TABLE zillow_zhvi_sfr_zip_silver AS\n",
     "(UNPIVOT zillow_zhvi_sfr_zip_bronze\n",
     "ON COLUMNS(* EXCLUDE (RegionID, SizeRank, RegionName, RegionType, StateName, State, City, Metro, CountyName))\n",
     "INTO\n",
     "NAME date\n",
-    "VALUE zhvi)\"\"\")"
+    "VALUE zhvi)\"\"\"\n",
+    ")"
    ]
   },
   {
@@ -650,9 +686,11 @@
     }
    ],
    "source": [
-    "con.sql(\"\"\"\n",
+    "con.sql(\n",
+    "    \"\"\"\n",
     "SELECT * FROM zillow_zhvi_sfr_zip_silver WHERE RegionName = 21771\n",
-    "\"\"\")"
+    "\"\"\"\n",
+    ")"
    ]
   },
   {
@@ -661,7 +699,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con.sql(\"\"\"\n",
+    "con.sql(\n",
+    "    \"\"\"\n",
     "CREATE OR REPLACE TABLE zillow_zhvi_sfr_zip_with_tracts_silver AS (\n",
     "    SELECT \n",
     "        RegionName, \n",
@@ -680,7 +719,8 @@
     "            z.date::DATE <= cw.end_date\n",
     "    ) \n",
     "WHERE tracts is not null)\n",
-    "\"\"\")"
+    "\"\"\"\n",
+    ")"
    ]
   },
   {
@@ -756,7 +796,8 @@
     }
    ],
    "source": [
-    "con.sql(\"\"\"\n",
+    "con.sql(\n",
+    "    \"\"\"\n",
     "SELECT * FROM (\n",
     "    SELECT \n",
     "        RegionName,\n",
@@ -779,7 +820,8 @@
     "    )\n",
     ") \n",
     "WHERE zip = 21771\n",
-    "\"\"\")"
+    "\"\"\"\n",
+    ")"
    ]
   },
   {
@@ -803,7 +845,8 @@
     }
    ],
    "source": [
-    "con.sql(\"\"\"\n",
+    "con.sql(\n",
+    "    \"\"\"\n",
     "CREATE OR REPLACE TABLE zillow_zhvi_sfr_zip_with_svi_silver AS (\n",
     "    SELECT \n",
     "        RegionName,\n",
@@ -954,7 +997,9 @@
     }
    ],
    "source": [
-    "con.sql(\"SELECT * FROM zillow_zhvi_sfr_zip_with_svi_silver ORDER BY zip, date\").show(max_rows=100)"
+    "con.sql(\"SELECT * FROM zillow_zhvi_sfr_zip_with_svi_silver ORDER BY zip, date\").show(\n",
+    "    max_rows=100\n",
+    ")"
    ]
   },
   {
