--- a/jupyter_notebooks/Dashboard.ipynb
+++ b/jupyter_notebooks/Dashboard.ipynb
@@ -90,7 +90,9 @@
     }
    ],
    "source": [
-    "con.sql(\"SELECT * FROM zillow_zhvi_sfr_zip_with_svi_silver WHERE StateName = 'MD' ORDER BY avg_rpl_themes \")"
+    "con.sql(\n",
+    "    \"SELECT * FROM zillow_zhvi_sfr_zip_with_svi_silver WHERE StateName = 'MD' ORDER BY avg_rpl_themes \"\n",
+    ")"
    ]
   },
   {
@@ -161,7 +163,8 @@
     }
    ],
    "source": [
-    "zillow_svi_df = con.sql(\"\"\"\n",
+    "zillow_svi_df = con.sql(\n",
+    "    \"\"\"\n",
     "SELECT \n",
     "    StateName,\n",
     "    zip::string as zip,\n",
@@ -174,7 +177,8 @@
     "    avg(avg_rpl_themes) as avg_rpl_themes \n",
     "FROM zillow_zhvi_sfr_zip_with_svi_silver \n",
     "GROUP BY StateName, zip, year(date::DATE)\n",
-    "ORDER BY avg_zhvi\"\"\").df()\n",
+    "ORDER BY avg_zhvi\"\"\"\n",
+    ").df()\n",
     "zillow_svi_df.head(1)"
    ]
   },
@@ -222,7 +226,7 @@
    ],
    "source": [
     "con.sql(\n",
-    "\"\"\"\n",
+    "    \"\"\"\n",
     "    SELECT * FROM (\n",
     "    SELECT \n",
     "        StateName,\n",
@@ -244,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -324,41 +328,55 @@
     "years.sort()\n",
     "states = zillow_svi_df.StateName.unique()\n",
     "states.sort()\n",
-    "themes = [\"avg_rpl_theme1\", \"avg_rpl_theme2\", \"avg_rpl_theme3\", \"avg_rpl_theme4\", \"avg_rpl_themes\"]\n",
+    "themes = [\n",
+    "    \"avg_rpl_theme1\",\n",
+    "    \"avg_rpl_theme2\",\n",
+    "    \"avg_rpl_theme3\",\n",
+    "    \"avg_rpl_theme4\",\n",
+    "    \"avg_rpl_themes\",\n",
+    "]\n",
     "\n",
     "\n",
-    "    # dcc.Dropdown(df.nation.unique(), id='pandas-dropdown-2'),\n",
-    "    # html.Div(id='pandas-output-container-2')\n",
+    "# dcc.Dropdown(df.nation.unique(), id='pandas-dropdown-2'),\n",
+    "# html.Div(id='pandas-output-container-2')\n",
     "\n",
     "# Create layout with dropdown and graph\n",
-    "app.layout = html.Div([\n",
-    "    html.Div([\n",
-    "        dcc.Dropdown(years, id='pandas-dropdown-1', value=2020),\n",
-    "        html.Div(id='pandas-output-container-1')\n",
-    "    ]),\n",
-    "    html.Div([\n",
-    "        dcc.Dropdown(states, id='pandas-dropdown-2'),\n",
-    "        html.Div(id='pandas-output-container-2')\n",
-    "    ]),\n",
-    "    html.Div([\n",
-    "        dcc.Dropdown(themes, id='pandas-dropdown-3', value=\"avg_rpl_themes\"),\n",
-    "        html.Div(id='pandas-output-container-3')\n",
-    "    ]),\n",
-    "])\n",
+    "app.layout = html.Div(\n",
+    "    [\n",
+    "        html.Div(\n",
+    "            [\n",
+    "                dcc.Dropdown(years, id=\"pandas-dropdown-1\", value=2020),\n",
+    "                html.Div(id=\"pandas-output-container-1\"),\n",
+    "            ]\n",
+    "        ),\n",
+    "        html.Div(\n",
+    "            [\n",
+    "                dcc.Dropdown(states, id=\"pandas-dropdown-2\"),\n",
+    "                html.Div(id=\"pandas-output-container-2\"),\n",
+    "            ]\n",
+    "        ),\n",
+    "        html.Div(\n",
+    "            [\n",
+    "                dcc.Dropdown(themes, id=\"pandas-dropdown-3\", value=\"avg_rpl_themes\"),\n",
+    "                html.Div(id=\"pandas-output-container-3\"),\n",
+    "            ]\n",
+    "        ),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
     "\n",
     "def update_graph():\n",
     "    pass\n",
     "\n",
     "\n",
     "@callback(\n",
-    "    Output('pandas-output-container-3', 'children'),\n",
-    "    Input('pandas-dropdown-1', 'value'),\n",
-    "    Input('pandas-dropdown-2', 'value'),\n",
-    "    Input('pandas-dropdown-3', 'value'),\n",
-    "\n",
+    "    Output(\"pandas-output-container-3\", \"children\"),\n",
+    "    Input(\"pandas-dropdown-1\", \"value\"),\n",
+    "    Input(\"pandas-dropdown-2\", \"value\"),\n",
+    "    Input(\"pandas-dropdown-3\", \"value\"),\n",
     ")\n",
     "def update_output(year, state, rpl_theme):\n",
-    "    render_df= con.sql(\n",
+    "    render_df = con.sql(\n",
     "        f\"\"\"\n",
     "        SELECT * FROM (\n",
     "        SELECT \n",
@@ -374,12 +392,12 @@
     "        FROM zillow_zhvi_sfr_zip_with_svi_silver \n",
     "        GROUP BY StateName, zip, year(date::DATE)\n",
     "        ORDER BY avg_zhvi)\n",
-    "        WHERE avg_zhvi is not null AND {rpl_theme} IS NOT NULL\"\"\").df()\n",
-    "    display(render_df)\n",
-    "    \n",
-    "    render_df = render_df.loc[zillow_svi_df['year'] == year]\n",
-    "    render_df = render_df.loc[zillow_svi_df['StateName'] == state]\n",
-    "    render_df['idx'] = range(1, len(render_df)+1)\n",
+    "        WHERE avg_zhvi is not null AND {rpl_theme} IS NOT NULL\"\"\"\n",
+    "    ).df()\n",
+    "\n",
+    "    render_df = render_df.loc[zillow_svi_df[\"year\"] == year]\n",
+    "    render_df = render_df.loc[zillow_svi_df[\"StateName\"] == state]\n",
+    "    render_df[\"idx\"] = range(1, len(render_df) + 1)\n",
     "\n",
     "    # Create figure with subplots\n",
     "    fig = make_subplots(rows=2, cols=1)\n",
@@ -389,9 +407,10 @@
     "        go.Bar(\n",
     "            x=render_df.zip,\n",
     "            y=render_df.avg_zhvi,\n",
-    "            name='Average ZHVI',\n",
+    "            name=\"Average ZHVI\",\n",
     "        ),\n",
-    "        row=1, col=1, \n",
+    "        row=1,\n",
+    "        col=1,\n",
     "    )\n",
     "\n",
     "    # Add second bar chart\n",
@@ -399,19 +418,26 @@
     "        go.Bar(\n",
     "            x=render_df.zip,\n",
     "            y=render_df[rpl_theme],\n",
-    "            name='Average SVI Theme',\n",
+    "            name=\"Average SVI Theme\",\n",
     "        ),\n",
-    "        row=2, col=1\n",
+    "        row=2,\n",
+    "        col=1,\n",
     "    )\n",
-    "    \n",
-    "    fig_scatter = px.scatter(render_df, x=\"idx\", y=rpl_theme, trendline=\"ols\", trendline_color_override=\"black\")\n",
+    "\n",
+    "    fig_scatter = px.scatter(\n",
+    "        render_df,\n",
+    "        x=\"idx\",\n",
+    "        y=rpl_theme,\n",
+    "        trendline=\"ols\",\n",
+    "        trendline_color_override=\"black\",\n",
+    "    )\n",
     "    trendline = fig_scatter.data[1]\n",
     "    trendline.x = list(render_df.zip)\n",
     "    fig.add_trace(trendline, row=2, col=1)\n",
     "    return dcc.Graph(figure=fig)\n",
     "\n",
     "\n",
-    "if __name__ == '__main__':\n",
+    "if __name__ == \"__main__\":\n",
     "    app.run_server(debug=True, port=1222)"
    ]
   },
