--- a/jupyter_notebooks/Dashboard.ipynb
+++ b/jupyter_notebooks/Dashboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "└──────────────────────────┘"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -73,35 +73,35 @@
        "│ RegionName │ StateName │  zip  │    date    │        zhvi        │ avg_rpl_theme1 │ avg_rpl_theme2 │ avg_rpl_theme3 │ avg_rpl_theme4 │ avg_rpl_themes │\n",
        "│   int64    │  varchar  │ int64 │  varchar   │       double       │     double     │     double     │     double     │     double     │     double     │\n",
        "├────────────┼───────────┼───────┼────────────┼────────────────────┼────────────────┼────────────────┼────────────────┼────────────────┼────────────────┤\n",
-       "│      21777 │ MD        │ 21777 │ 2022-04-30 │ 468445.39915809344 │         0.0714 │         0.1038 │         0.4599 │         0.0057 │         0.0108 │\n",
-       "│      21777 │ MD        │ 21777 │ 2022-09-30 │  472083.3306261815 │         0.0714 │         0.1038 │         0.4599 │         0.0057 │         0.0108 │\n",
        "│      21777 │ MD        │ 21777 │ 2022-02-28 │  457127.3972036655 │         0.0714 │         0.1038 │         0.4599 │         0.0057 │         0.0108 │\n",
        "│      21777 │ MD        │ 21777 │ 2022-08-31 │  475167.2715428457 │         0.0714 │         0.1038 │         0.4599 │         0.0057 │         0.0108 │\n",
-       "│      21777 │ MD        │ 21777 │ 2022-03-31 │  462903.8684261962 │         0.0714 │         0.1038 │         0.4599 │         0.0057 │         0.0108 │\n",
-       "│      21777 │ MD        │ 21777 │ 2022-07-31 │  476913.1976059579 │         0.0714 │         0.1038 │         0.4599 │         0.0057 │         0.0108 │\n",
-       "│      21777 │ MD        │ 21777 │ 2022-11-30 │  469128.3298316935 │         0.0714 │         0.1038 │         0.4599 │         0.0057 │         0.0108 │\n",
+       "│      21777 │ MD        │ 21777 │ 2022-01-31 │  452250.0584766461 │         0.0714 │         0.1038 │         0.4599 │         0.0057 │         0.0108 │\n",
        "│      21777 │ MD        │ 21777 │ 2022-05-31 │  473069.7427839032 │         0.0714 │         0.1038 │         0.4599 │         0.0057 │         0.0108 │\n",
        "│      21777 │ MD        │ 21777 │ 2022-06-30 │  476134.8908466429 │         0.0714 │         0.1038 │         0.4599 │         0.0057 │         0.0108 │\n",
+       "│      21777 │ MD        │ 21777 │ 2022-04-30 │ 468445.39915809344 │         0.0714 │         0.1038 │         0.4599 │         0.0057 │         0.0108 │\n",
+       "│      21777 │ MD        │ 21777 │ 2022-09-30 │  472083.3306261815 │         0.0714 │         0.1038 │         0.4599 │         0.0057 │         0.0108 │\n",
        "│      21777 │ MD        │ 21777 │ 2022-10-31 │  470120.7046551861 │         0.0714 │         0.1038 │         0.4599 │         0.0057 │         0.0108 │\n",
-       "│        ·   │ ·         │   ·   │     ·      │           ·        │             ·  │             ·  │             ·  │             ·  │             ·  │\n",
-       "│        ·   │ ·         │   ·   │     ·      │           ·        │             ·  │             ·  │             ·  │             ·  │             ·  │\n",
-       "│        ·   │ ·         │   ·   │     ·      │           ·        │             ·  │             ·  │             ·  │             ·  │             ·  │\n",
-       "│      20690 │ MD        │ 20690 │ 2022-01-31 │   454236.473243651 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
-       "│      20690 │ MD        │ 20690 │ 2022-02-28 │ 456807.19663920806 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
-       "│      20690 │ MD        │ 20690 │ 2022-08-31 │  479811.8805119752 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
-       "│      20674 │ MD        │ 20674 │ 2022-10-31 │  387232.5660246464 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
-       "│      21767 │ MD        │ 21767 │ 2022-02-28 │  238180.5579939174 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
-       "│      21767 │ MD        │ 21767 │ 2022-05-31 │ 246759.39615327152 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
-       "│      21914 │ MD        │ 21914 │ 2022-08-31 │ 288420.99683739914 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
-       "│      20629 │ MD        │ 20629 │ 2022-11-30 │  420497.3812207419 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
-       "│      20612 │ MD        │ 20612 │ 2022-05-31 │  326356.7024222924 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
-       "│      20759 │ MD        │ 20759 │ 2022-03-31 │  866320.9774756754 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
+       "│      21777 │ MD        │ 21777 │ 2022-12-31 │  469549.7811714408 │         0.0714 │         0.1038 │         0.4599 │         0.0057 │         0.0108 │\n",
+       "│      21777 │ MD        │ 21777 │ 2022-03-31 │  462903.8684261962 │         0.0714 │         0.1038 │         0.4599 │         0.0057 │         0.0108 │\n",
+       "│        ·   │ ·         │   ·   │     ·      │          ·         │             ·  │             ·  │             ·  │             ·  │             ·  │\n",
+       "│        ·   │ ·         │   ·   │     ·      │          ·         │             ·  │             ·  │             ·  │             ·  │             ·  │\n",
+       "│        ·   │ ·         │   ·   │     ·      │          ·         │             ·  │             ·  │             ·  │             ·  │             ·  │\n",
+       "│      20690 │ MD        │ 20690 │ 2022-11-30 │  470423.7421518297 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
+       "│      21767 │ MD        │ 21767 │ 2022-04-30 │  244386.8963246882 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
+       "│      21767 │ MD        │ 21767 │ 2022-06-30 │ 249007.41690076035 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
+       "│      21767 │ MD        │ 21767 │ 2022-07-31 │    250153.41864325 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
+       "│      21767 │ MD        │ 21767 │ 2022-08-31 │ 249736.68384581184 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
+       "│      21914 │ MD        │ 21914 │ 2022-01-31 │  274258.6664827591 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
+       "│      20629 │ MD        │ 20629 │ 2022-07-31 │  429075.2961839321 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
+       "│      20629 │ MD        │ 20629 │ 2022-09-30 │  422589.0916135716 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
+       "│      20612 │ MD        │ 20612 │ 2022-03-31 │ 324348.62564716727 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
+       "│      20612 │ MD        │ 20612 │ 2022-06-30 │  328417.7627710527 │           NULL │           NULL │           NULL │           NULL │           NULL │\n",
        "├────────────┴───────────┴───────┴────────────┴────────────────────┴────────────────┴────────────────┴────────────────┴────────────────┴────────────────┤\n",
        "│ 5040 rows (20 shown)                                                                                                                       10 columns │\n",
        "└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "0         0.84855        0.451722        0.770572  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -212,32 +212,32 @@
        "│  varchar  │ varchar │ int64 │       double       │       double        │        double        │       double        │       double       │       double        │\n",
        "├───────────┼─────────┼───────┼────────────────────┼─────────────────────┼──────────────────────┼─────────────────────┼────────────────────┼─────────────────────┤\n",
        "│ DC        │ 20006   │  2022 │  257210.8715989442 │ 0.42169999999999996 │ 0.007266666666666669 │  0.5806333333333334 │ 0.9794333333333333 │ 0.42863333333333337 │\n",
-       "│ DC        │ 20032   │  2022 │ 362699.57341268007 │  0.7566538461538461 │   0.6499153846153848 │  0.9460769230769231 │ 0.7854846153846154 │  0.8297923076923076 │\n",
+       "│ DC        │ 20032   │  2022 │ 362699.57341268007 │  0.7566538461538461 │   0.6499153846153848 │  0.9460769230769231 │ 0.7854846153846152 │  0.8297923076923078 │\n",
        "│ DC        │ 20036   │  2022 │  384038.5703549948 │  0.2518666666666667 │ 0.010833333333333332 │  0.5575666666666667 │ 0.9365333333333333 │  0.3022666666666667 │\n",
-       "│ DC        │ 20019   │  2022 │   398068.794258016 │  0.7483952380952384 │   0.6672476190476191 │  0.9703047619047619 │ 0.8127809523809525 │  0.8309857142857142 │\n",
-       "│ DC        │ 20020   │  2022 │  409341.1758113092 │  0.7462888888888889 │   0.6429277777777777 │  0.9653944444444443 │  0.780122222222222 │   0.813422222222222 │\n",
+       "│ DC        │ 20019   │  2022 │   398068.794258016 │  0.7483952380952382 │   0.6672476190476191 │  0.9703047619047619 │ 0.8127809523809527 │  0.8309857142857142 │\n",
+       "│ DC        │ 20020   │  2022 │  409341.1758113092 │  0.7462888888888889 │   0.6429277777777777 │  0.9653944444444443 │ 0.7801222222222223 │   0.813422222222222 │\n",
        "│ DC        │ 20024   │  2022 │  444893.7010165578 │  0.6428499999999999 │               0.2908 │             0.75015 │            0.66025 │              0.5901 │\n",
        "│ DC        │ 20005   │  2022 │  543468.3365945217 │ 0.10846666666666667 │ 0.014766666666666666 │              0.5568 │ 0.8103666666666666 │ 0.19076666666666667 │\n",
        "│ DC        │ 20037   │  2022 │  586636.6426598077 │ 0.36883333333333335 │ 0.037200000000000004 │  0.5544666666666668 │ 0.9430666666666667 │ 0.40243333333333337 │\n",
-       "│ DC        │ 20009   │  2022 │  591301.6727090544 │              0.2381 │  0.13652727272727275 │  0.5759636363636363 │  0.779809090909091 │  0.3166272727272727 │\n",
+       "│ DC        │ 20009   │  2022 │  591301.6727090547 │              0.2381 │  0.13652727272727275 │  0.5759636363636363 │  0.779809090909091 │  0.3166272727272727 │\n",
        "│ DC        │ 20017   │  2022 │   608359.403955455 │ 0.40895999999999993 │  0.45516000000000006 │  0.8109500000000001 │ 0.6204400000000002 │             0.52771 │\n",
        "│ DC        │ 20018   │  2022 │  615946.5172445833 │  0.4615428571428572 │   0.4375571428571428 │  0.8399571428571427 │ 0.6272142857142856 │  0.5400714285714285 │\n",
        "│ DC        │ 20011   │  2022 │  698026.3863917555 │  0.4221052631578948 │   0.5437947368421053 │  0.8438842105263159 │ 0.7739684210526313 │   0.624057894736842 │\n",
-       "│ DC        │ 20002   │  2022 │  707087.5312695425 │ 0.39603214285714294 │  0.23362142857142862 │  0.7211035714285714 │ 0.7203928571428574 │ 0.44819642857142844 │\n",
-       "│ DC        │ 20001   │  2022 │  712953.3695240276 │ 0.29823529411764704 │  0.11252352941176473 │  0.6689823529411766 │ 0.7969764705882353 │ 0.38000588235294125 │\n",
-       "│ DC        │ 20010   │  2022 │  770553.5115390116 │             0.44181 │  0.42788999999999994 │  0.7487800000000001 │ 0.8578700000000001 │             0.62588 │\n",
+       "│ DC        │ 20002   │  2022 │  707087.5312695425 │ 0.39603214285714294 │  0.23362142857142862 │  0.7211035714285714 │ 0.7203928571428572 │ 0.44819642857142855 │\n",
+       "│ DC        │ 20001   │  2022 │  712953.3695240276 │  0.2982352941176471 │   0.1125235294117647 │  0.6689823529411766 │ 0.7969764705882353 │ 0.38000588235294114 │\n",
+       "│ DC        │ 20010   │  2022 │  770553.5115390116 │             0.44181 │  0.42789000000000005 │  0.7487800000000001 │ 0.8578700000000001 │             0.62588 │\n",
        "│ DC        │ 20012   │  2022 │  841485.9385319616 │           0.4458875 │               0.6243 │  0.8603124999999999 │ 0.7271624999999999 │  0.6277375000000002 │\n",
-       "│ DC        │ 20008   │  2022 │  887974.9504344674 │ 0.11874999999999998 │              0.18576 │ 0.49682999999999994 │            0.68214 │             0.24634 │\n",
+       "│ DC        │ 20008   │  2022 │  887974.9504344674 │ 0.11874999999999998 │              0.18576 │ 0.49683000000000005 │            0.68214 │             0.24634 │\n",
        "│ DC        │ 20003   │  2022 │  890459.9535578095 │ 0.29621999999999993 │   0.1945666666666667 │  0.5829466666666667 │ 0.6686599999999999 │ 0.33617333333333327 │\n",
        "│ DC        │ 20016   │  2022 │ 1123306.3963578222 │              0.0978 │  0.25799999999999995 │ 0.42969999999999997 │ 0.5956166666666666 │ 0.23226666666666665 │\n",
-       "│ DC        │ 20007   │  2022 │ 1194267.7418428257 │             0.09408 │  0.11603999999999999 │              0.5066 │              0.577 │ 0.17546000000000003 │\n",
-       "│ DC        │ 20015   │  2022 │  1328337.421466527 │              0.0938 │              0.30358 │              0.5297 │            0.60064 │ 0.25536000000000003 │\n",
+       "│ DC        │ 20007   │  2022 │ 1194267.7418428257 │             0.09408 │  0.11604000000000002 │              0.5066 │              0.577 │ 0.17545999999999998 │\n",
+       "│ DC        │ 20015   │  2022 │ 1328337.4214665273 │              0.0938 │              0.30358 │              0.5297 │            0.60064 │ 0.25536000000000003 │\n",
        "├───────────┴─────────┴───────┴────────────────────┴─────────────────────┴──────────────────────┴─────────────────────┴────────────────────┴─────────────────────┤\n",
        "│ 21 rows                                                                                                                                              9 columns │\n",
        "└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,9 +266,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:1222/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1ca92d0f350>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------------------------------------------------\n",
+      "InvalidInputException                     Traceback (most recent call last)\n",
+      "Cell In[15], line 79, in update_output(\n",
+      "    year=2020,\n",
+      "    state=None,\n",
+      "    rpl_theme='avg_rpl_themes'\n",
+      ")\n",
+      "     55 @callback(\n",
+      "     56     Output(\"pandas-output-container-3\", \"children\"),\n",
+      "     57     Input(\"pandas-dropdown-1\", \"value\"),\n",
+      "   (...)\n",
+      "     60 )\n",
+      "     61 def update_output(year, state, rpl_theme):\n",
+      "     62     render_df = con.sql(\n",
+      "     63         f\"\"\"\n",
+      "     64         SELECT * FROM (\n",
+      "     65         SELECT \n",
+      "     66             StateName,\n",
+      "     67             zip::string as zip,\n",
+      "     68             year(date::DATE) as year, \n",
+      "     69             avg(zhvi) as avg_zhvi, \n",
+      "     70             avg(avg_rpl_theme1) as avg_rpl_theme1, \n",
+      "     71             avg(avg_rpl_theme2) as avg_rpl_theme2, \n",
+      "     72             avg(avg_rpl_theme3) as avg_rpl_theme3, \n",
+      "     73             avg(avg_rpl_theme4) as avg_rpl_theme4, \n",
+      "     74             avg(avg_rpl_themes) as avg_rpl_themes \n",
+      "     75         FROM zhvi_sfr_zip_with_svi \n",
+      "     76         GROUP BY StateName, zip, year(date::DATE)\n",
+      "     77         ORDER BY avg_zhvi)\n",
+      "     78         WHERE avg_zhvi is not null AND {rpl_theme} IS NOT NULL\"\"\"\n",
+      "---> 79     ).df()\n",
+      "        con = <duckdb.duckdb.DuckDBPyConnection object at 0x000001CA947373F0>\n",
+      "        rpl_theme = 'avg_rpl_themes'\n",
+      "     81     render_df = render_df.loc[zillow_svi_df[\"year\"] == year]\n",
+      "     82     render_df = render_df.loc[zillow_svi_df[\"StateName\"] == state]\n",
+      "\n",
+      "InvalidInputException: Invalid Input Error: Attempting to execute an unsuccessful or closed pending query result\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from dash import Dash, dcc, html, Input, Output, callback\n",
     "import plotly.express as px\n",
@@ -398,17 +464,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "con.close()"
+    "# con.close()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
