--- a/jupyter_notebooks/FullPipeline.ipynb
+++ b/jupyter_notebooks/FullPipeline.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pipeline As A Notebook"
+    "# Pipeline As A Notebook\n",
+    "\n",
+    "You must still create `chosen_data/zillow` and run `Invoke-WebRequest -Uri \"https://files.zillowstatic.com/research/public_csvs/zhvi/Zip_zhvi_uc_sfrcondo_tier_0.33_0.67_sm_sa_month.csv?t=1734396310\" -OutFile .\\chosen_data\\zillow\\Zip_zhvi_uc_sfrcondo_tier_0.33_0.67_sm_sa_month.csv` from the shell."
    ]
   },
   {
@@ -40,87 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "download_directory = \"../chosen_data\"\n",
-    "year = 2020"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Database Connection"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import duckdb\n",
-    "\n",
-    "# create a connection to a file called 'test_database.db'\n",
-    "con = duckdb.connect(\"../data/database_jupyter.db\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create Tables\n",
-    "If they do not exist create the expected tables"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Would need to include code for table migration/translation when new SVI datasets are downloaded\n",
-    "\n",
-    "We will not precreate Zillows Bronze table, as those will be overwrites exclusively and then need to be pivoted. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "┌─────────┐\n",
-       "│  name   │\n",
-       "│ varchar │\n",
-       "├─────────┤\n",
-       "│ 0 rows  │\n",
-       "└─────────┘"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "con.sql(\"SHOW TABLES\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "con.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,17 +60,19 @@
     "import entry\n",
     "import os\n",
     "\n",
-    "print(os.getcwd()) \n",
-    "# May need to set this to the specific directory of the project depending on if the configuration uses relative or exact paths\n",
+    "current_cwd = os.getcwd()\n",
+    "print(current_cwd) \n",
+    "# May need to set this to the specific directory of the project depending on if the configuration uses relative or absolute paths\n",
     "os.chdir(\"../\")\n",
     "print(os.getcwd()) \n",
     "sys.argv[1]=\"--pipeline_config=./2022_pipeline.yaml\"\n",
-    "entry.main()"
+    "entry.main()\n",
+    "os.chdir(current_cwd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -184,13 +108,13 @@
     "\n",
     "print(os.getcwd()) \n",
     "# create a connection to a file called 'test_database.db'\n",
-    "con = duckdb.connect(\"./data/medallion.db\")\n",
+    "con = duckdb.connect(\"../data/medallion.db\")\n",
     "con.sql(\"SHOW TABLES\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +124,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
